2023-01-05  Alex Tutubalin <lexa@lexa.ru>
 LibRaw 0.21.1-Release
 * fixed typo in panasonic metadata parser

2022-12-18  Alex Tutubalin <lexa@lexa.ru>
 LibRaw 0.21-Release

 * Multiple fixes inspired by oss-fuzz project

2022-07-01  Alex Tutubalin <lexa@lexa.ru>

 LibRaw 0.21-Beta1

 == Camera format support ==
 * Phase One/Leaf IIQ-S v2 support
 * Canon CR3 filmrolls
 * Canon CRM (movie) files
 * Tiled bit-packed (and 16-bit unpacked) DNGs
 * (non-standard) Deflate-compressed integer DNG files are allowed

== Camera support ==

 * Canon EOS R3, R7 and R10
 * Fujifilm X-H2S, X-T30 II
 * OM System OM-1
 * Leica M11
 * Sony A7-IV (ILCE-7M4)
 * DJI Mavic 3
 * Nikon Z9: standard compression formats only

 == Multiple (resolution) thumbnails support ==
 
 * New imgdata.thumbs_list data item with data fields:

   int thumbcount: thumbnail count  
   libraw_thumbnail_item_t thumblist[LIBRAW_THUMBNAIL_MAXCOUNT]: list  of thumbnails

   libraw_thumbnail_item_t fields:

     enum LibRaw_internal_thumbnail_formats tformat: internal thumbnail format
        (this is not PPM/JPEG, but internal type related to thumbnail reading/unpacking method)

     ushort twidth, theight: thumbnail image size.

     ushort tflip: image rotation (see notes below)
    
     unsigned tlength: on-disk data size (not uncompressed for compressed formats)
     
     unsigned tmisc: bit depth and channel count:  (color << 5) | bitsperpixel
 
     INT64 toffset: Thumbnail data offset in file 

  Notes:
    -  Only TIFF-based and CR3 files are parsed for thumbnail list, other formats will have
       thumbcount = 1 (or 0 if no thumbnail found in file).

    -  Thumbnail image size may be unknown (not recorded in metadata), in this case twidth and theight are zero.
       Usually small(er) thumbnails will always have twidth/theight filled, while largest one may have these fields set to zero.
