@@ -1,3 +1,9 @@
+2023-05-13   Alex Tutubalin <lexa@lexa.ru>
+  * New compile-defined limit LIBRAW_MAX_PROFILE_SIZE_MB: 
+       limits allocation/read size for embedded color profile (default: 256Mb)
+
+  * Embedded color profile allocation/read size: limited by input file size.
+ 
 2023-01-05  Alex Tutubalin <lexa@lexa.ru>
  LibRaw 0.21.1-Release
  * fixed typo in panasonic metadata parser
